--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>Manual Do Autismo</title>
+    <title>Manual do Autismo</title>
     
     <style type="text/css">
       body {
         color: white;
-        background-image: url("assets/img/bg.jpeg");
+        background-image: url("assets/img/bg.jpg");
         background-color: rgba(0, 0, 0, 0.6);
         background-position: center;
         background-size: cover;
@@ -41,7 +41,7 @@
             <h3 class="my-4"><b>Simples Manual para ser Usado em Casa</b></h3>
 
             <!-- VSL -->
-             <div id="vid_635922cd5c0053000ab57105" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_635922cd5c0053000ab57105" src="https://images.converteai.net/73fd43c9-e2de-4b2b-a8d8-51f1aebdde88/players/635922cd5c0053000ab57105/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_635922cd5c0053000ab57105" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_635922cd5c0053000ab57105">var s=document.createElement("script");s.src="https://scripts.converteai.net/73fd43c9-e2de-4b2b-a8d8-51f1aebdde88/players/635922cd5c0053000ab57105/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <div id="vid_635922cd5c0053000ab57105" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_635922cd5c0053000ab57105" src="https://images.converteai.net/73fd43c9-e2de-4b2b-a8d8-51f1aebdde88/players/635922cd5c0053000ab57105/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_635922cd5c0053000ab57105" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_635922cd5c0053000ab57105">var s=document.createElement("script");s.src="https://scripts.converteai.net/73fd43c9-e2de-4b2b-a8d8-51f1aebdde88/players/635922cd5c0053000ab57105/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
